# punxa

./: .gitignore  README.md  pyproject.toml  require.txt  requires.txt  setup.py
punxa/: __init__.py  assembly.py  bus.py  clint.py  csr.py  custom_instruction.py  fpu.py  instruction_decode.py  interactive_commands.py  jupyter.py  memory.py  plic.py  processor_exceptions.py  serialize.py  temp_helper.py  tracing.py  uart.py
punxa/microprogrammed/: __init__.py  microprogrammed_processor.py  microprogrammed_processor_proxy_kernel.py
punxa/single_cycle/: __init__.py  singlecycle_processor.py  singlecycle_processor_32.py  singlecycle_processor_proxy_kernel.py  singlecycle_processor_proxy_linux.py
riscv/: bus.py  clint.py  csr.py  fpu.py  instruction_decode.py  interactive_commands.py  memory.py  temp_helper.py  tracing.py  uart.py
riscv/single_cycle/: singlecycle_processor.py  singlecycle_processor_proxy_kernel.py
test/: README.md  tb_ISA_tests.py  tb_SingleCycle.py
test/baremetal/hello/: Makefile  README.md  hello.c  hello.elf  hello_32.disasm  hello_32.elf  hello_64.disasm  hello_64.elf  kernel.c  startup.S  tb_HelloBaremetal.py
test/buildroot/: .gitignore  Makefile  punxa_rv64.dts  punxa_rv64_defconfig  punxa_rv64_linux_defconfig  tb_Buildroot.py
test/jupyter/: Interactive Simulator.ipynb  Tracemem.ipynb  jupyter_simulator.py
test/linux_boot/: tb_LinuxBoot.py
test/riscv-arch-test/: tb_signature.py
test/riscv-tests/: README.md  tb_ISA_microprogrammed.py  tb_ISA_microprogrammed_32.py  tb_ISA_tests.py  tb_ISA_tests_32.py
(+886 files in other folders)
